# simple_ssh

./: .gitignore  COMMIT_STYLE.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  justfile
.github/workflows/: ci.yaml  deploy.yml
examples/: basic.rs  cli.rs  ipv6.rs  pty.rs  scp.rs  simple-scp.rs  simple-ssh.rs
pages/: .gitignore  .stylelintrc.json  README.md  index.html  package-lock.json  package.json  test-variables.mjs  tsconfig.app.json  vite.config.ts  vitest.config.ts
pages/scripts/: copy-examples.test.ts  copy-examples.ts  download-fonts.ts
pages/src/: App.vue
pages/src/components/: CodeBlock.spec.ts  CodeBlock.vue  CodeExamplesSection.spec.ts  CodeExamplesSection.vue  EditorSection.vue  FeatureCard.vue  FeaturesSection.vue  Footer.spec.ts  Footer.vue  Header.spec.ts  Header.vue  HeroSection.spec.ts  HeroSection.vue  InstallSection.spec.ts  InstallSection.vue  VSCodeEditor.vue
pages/src/components/icons/: ActivityIcon.vue  ChevronIcon.vue  CodeIcon.vue  CopyIcon.vue  CratesIcon.vue  DocsIcon.vue  FileIcon.vue  GithubIcon.vue  GlobeIcon.vue  LockIcon.vue  MenuIcon.vue  MonitorIcon.vue  RustIcon.vue  SearchIcon.vue  TerminalIcon.vue  UploadIcon.vue  index.ts
pages/src/composables/: tokenizeRust.spec.ts  useClipboard.spec.ts  useClipboard.ts  useExamples.spec.ts  useExamples.ts  useMobileMenu.spec.ts  useMobileMenu.ts  useScrollReveal.spec.ts  useScrollReveal.ts  useSyntaxHighlight.spec.ts  useSyntaxHighlight.ts
pages/src/styles/: global.scss  variables.scss
pages/src/tests/: global.spec.ts
src/: ipv6_tests.rs  lib.rs  pty_history.rs  pty_mode.rs  pty_pwd.rs
