[package]
name = "simple_ssh"
version = "0.1.2"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "s"

[profile.musl]
inherits = "release"
lto = "thin"
strip = true
opt-level = "s"
panic = "abort"

[dependencies]
russh = "0.51.1"
russh-keys = "0.49.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.97"
log = "0.4.27"
env_logger = { version = "0.6", default-features = false }
shell-escape = "0.1"
crossterm = "0.29.0"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }

[[example]]
name = "simple-ssh"
path = "examples/simple-ssh.rs"

[[example]]
name = "simple-scp"
path = "examples/simple-scp.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
