[package]
name = "simple_ssh"
version = "0.1.3"
edition = "2021"

description = "Simple async SSH for Rust"
license = "MIT"
repository = "https://github.com/juliankahlert/simple_ssh"
homepage = "https://juliankahlert.github.io/simple_ssh"
readme = "README.md"
keywords = ["ssh", "async", "scp", "pty", "russh"]
categories = ["network-programming", "asynchronous"]

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[profile.release]
lto = true
strip = true
opt-level = "s"

[profile.musl]
inherits = "release"
lto = "thin"
strip = true
opt-level = "s"
panic = "abort"

[dependencies]
russh = "0.51.1"
russh-keys = "0.49.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.97"
log = "0.4.27"
env_logger = { version = "0.6", default-features = false }
shell-escape = "0.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
clap = { version = "4.5.56", features = ["derive"], optional = true }
futures = { version = "0.3", optional = true }
vt100 = { version = "0.16", optional = true }
parking_lot = "0.12"

[features]
default = []
cli = ["dep:clap", "dep:futures", "dep:vt100"]

[[bin]]
name = "simple-ssh"
path = "src/bin/simple-ssh.rs"
required-features = ["cli"]

[[bin]]
name = "simple-scp"
path = "src/bin/simple-scp.rs"
required-features = ["cli"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
